--- a/src/my-combriccola.html
+++ b/src/my-combriccola.html
@@ -20,6 +20,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
 
         padding: 10px;
+
+        text-align: center;
       }
 
 
@@ -44,7 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       img:first-of-type{
-        width: 80%;
+        width: 60%;
       }
 
       img{
