--- a/src/my-list.html
+++ b/src/my-list.html
@@ -33,6 +33,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <span>{{calcString("listacont1", langPath, lingua)}}</span>
       <span>{{calcString("listacont2", langPath, lingua)}}</span>
       <span>{{calcString("listacont3", langPath, lingua)}}</span>
+
+      <div>
+        <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi">Link</a>
+      </div>
     </div>
   </template>
 
