fatte le foto ingrandibili su target nuovo

--- a/src/my-proposal.html
+++ b/src/my-proposal.html
@@ -37,11 +37,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         justify-content: center;
       }
 
-      .photo-container img{
+      .photo-container a{
         width: 31%;
         margin: 1%;
         height: 100%;
         cursor: pointer;
+      }
+
+      .photo-container a img{
+        width: 100%;
       }
 
       .photo-container img:active{
@@ -65,8 +69,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!--<template is="dom-if" if="{{desktop}}">-->
       <div class="photo-container">
         
-        <img src="../images/klagenfurt/k3.jpg" on-tap="openDialog"/>
-        <img src="../images/klagenfurt/k4.jpg" on-tap="openDialog"/>
+       <a href="../images/klagenfurt/k3.jpg" target="_blank"><img src="../images/klagenfurt/k3.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k4.jpg" target="_blank"><img src="../images/klagenfurt/k4.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k5.jpg" target="_blank"><img src="../images/klagenfurt/k5.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k1.jpg" target="_blank"><img src="../images/klagenfurt/k1.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k6.jpg" target="_blank"><img src="../images/klagenfurt/k6.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k7.jpg" target="_blank"><img src="../images/klagenfurt/k7.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/noi.jpg" target="_blank"><img src="../images/klagenfurt/noi.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k8.jpg" target="_blank"><img src="../images/klagenfurt/k8.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k9.jpg" target="_blank"><img src="../images/klagenfurt/k9.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k10.jpg" target="_blank"><img src="../images/klagenfurt/k10.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k11.jpg" target="_blank"><img src="../images/klagenfurt/k11.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k12.jpg" target="_blank"><img src="../images/klagenfurt/k12.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k13.jpg" target="_blank"><img src="../images/klagenfurt/k13.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k14.jpg" target="_blank"><img src="../images/klagenfurt/k14.jpg" on-tap="openDialog"/></a>
+       <a href="../images/klagenfurt/k15.jpg" target="_blank"><img src="../images/klagenfurt/k15.jpg" on-tap="openDialog"/></a>
+
+
+        <!--<img src="../images/klagenfurt/k4.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/k5.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/k1.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/k6.jpg" on-tap="openDialog"/>
@@ -79,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <img src="../images/klagenfurt/k12.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/k13.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/k14.jpg" on-tap="openDialog"/>
-        <img src="../images/klagenfurt/k15.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k15.jpg" on-tap="openDialog"/>-->
       </div>
       <!--</template>-->
     </div>
