aggiunte foto anna paolo

--- a/src/my-combriccola.html
+++ b/src/my-combriccola.html
@@ -82,7 +82,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>{{calcString("combriccolatestoanna2", langPath, lingua)}}</span>
           </div>
           <div>
-            <img src="../images/donnachebeve.jpg"/>
+            <img src="../images/anna-calice.jpeg"/>
           </div>
         </div>
         <div>
@@ -93,7 +93,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>{{calcString("combriccolatestopaolo2", langPath, lingua)}}</span>
           </div>
           <div>
-            <img src="../images/uomochebeve.jpg"/>
+            <img src="../images/paolo-calice.jpg"/>
           </div>
         </div>
         <div>
