cambiata foto anna., tolta password cablata, tolti invitati dalle voci menu

--- a/src/my-login.html
+++ b/src/my-login.html
@@ -45,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               exit-animation="fade-out-animation">
       <div hidden$={{calcStatus(status.invite)}}>{{calcString("richiestapassword", langPath, lingua)}}</div>
       <paper-dialog-scrollable>
-        <paper-input hidden$={{calcStatus(status.invite)}} label="Password" id="password" value="02e20/2017asd7s18:04wPM"></paper-input>
+        <paper-input hidden$={{calcStatus(status.invite)}} label="Password" id="password"></paper-input>
         <div id="error" hidden>{{calcString("passworderror", langPath, lingua)}}</div>
       </paper-dialog-scrollable>
       <div class="buttons">
