--- a/public/src/shared-styles.html
+++ b/public/src/shared-styles.html
@@ -4,7 +4,7 @@
 </head><body><dom-module id="shared-styles">
   <template>
     <style>
-      .card {
+      .card  {
         margin:  var(--app-card-margin); /* 24px 10%;  */
         padding:  var(--app-card-padding) ; /*   16px;  */
         color: var(--app-card-color);
@@ -14,8 +14,9 @@
         font-size: 17px;
         line-height: 1.8;
         /*font-style: italic; */
-        font-family: 'Colaborate Regular';
+        font-family: 'Colaborate Regular','Helvetica';
       }
+      
 
       .circle {
         display: inline-block;
@@ -43,7 +44,7 @@
       .page-title{
          background: rgba(200,200,200,0.7);
          color: var(--app-primary-color);
-         font-family: 'Colaborate Bold';
+         font-family: 'Colaborate Bold','Tahoma';
          font-size: 32px;
          border-left: 7px solid;
          border-color: var(--app-primary-color);
@@ -66,7 +67,7 @@
       }
 
       .title h2, .title h3{
-          font-family: 'Colaborate Bold';
+          font-family: 'Colaborate Bold','Tahoma';
       }
 
 
