--- a/src/my-app.html
+++ b/src/my-app.html
@@ -161,7 +161,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
        #firmadesktop, #firmamobile{
          padding: 10px;
-         font-family: 'Pacifico';
+         font-family: 'Pacifico', 'Impact';
         
        }
 
