--- a/src/my-combriccola.html
+++ b/src/my-combriccola.html
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
       <div class="card">
-        <h3 class="page-title">{{calcString("combriccolatitolo", langPath, lingua)}}</h3>
+        <h3 class="page-title">{{calcString("combriccola", langPath, lingua)}}</h3>
 
         <div>
           <img src="../images/gruppo.jpg" />
