modifiche testi lista nozze

--- a/src/my-list.html
+++ b/src/my-list.html
@@ -46,7 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       </br>
       <div>
-        <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi">Lista On Line</a>
+        <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi">{{calcString("listalink1", langPath, lingua)}}</a>
       </div>
 
        </br>
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </br> 
 
          <div>
-        <a href="coordinate-cividin.html" target="_blank">Coordinate</a>
+        <a href="coordinate-cividin.html" target="_blank">{{calcString("listalink2", langPath, lingua)}}</a>
       </div>
     </div>
   </template>
