--- a/src/my-app.html
+++ b/src/my-app.html
@@ -304,7 +304,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="schedule" href="/schedule">{{calcString("programma", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <!--<a name="risposte" href="/risposte">risposte</a>-->
-          <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
+          <!--<a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>-->
           <a name="list" href="/list">{{calcString("lista", langPath, lingua)}}</a>
           <a name="hotel" href="/hotel">{{calcString("hotel", langPath, lingua)}}</a>
           <a name="contatti" href="/contatti">{{calcString("contattititolo", langPath, lingua)}}</a>
