aggiunte istruzioni per listaonline, cambiata email inglese

--- a/src/my-list.html
+++ b/src/my-list.html
@@ -46,9 +46,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       </br>
       <div>
-        <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi">{{calcString("listalink1", langPath, lingua)}}</a>
+        <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi" target="_blank">{{calcString("listalink1", langPath, lingua)}}</a>
       </div>
-
+      <div>
+          <a href="../src/istruzioni-lista-{{langPath}}.html" target="_blank">{{calcString("listalink3", langPath, lingua)}}</a>
+      </div>
        </br>
       <div>
        {{calcString("listacont5", langPath, lingua)}}
