--- a/src/my-list.html
+++ b/src/my-list.html
@@ -44,14 +44,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         {{calcString("listacont4", langPath, lingua)}}
       </div>
 
-      </br>
-      <div>
+      <!--</br>-->
+      <!--<div>
         <a href="http://www.cividin.it/it/viaggi-di-nozze-agenzia-cividin-viaggi" target="_blank">{{calcString("listalink1", langPath, lingua)}}</a>
       </div>
       <div>
           <a href="../src/istruzioni-lista-{{langPath}}.html" target="_blank">{{calcString("listalink3", langPath, lingua)}}</a>
-      </div>
+      </div>-->
        </br>
+       <div>
+          <a href="../src/descrizione-viaggio.pdf" target="_blank">{{calcString("listalink4", langPath, lingua)}}</a>
+      </div>
+      </br>
       <div>
        {{calcString("listacont5", langPath, lingua)}}
       </div>
