modificato testo inglese lista

--- a/public/src/my-app.html
+++ b/public/src/my-app.html
@@ -129,7 +129,7 @@
       }
 
       #firmadesktop{
-        font-size: 15px;
+        font-size: 14px;
       }
 
        #firmamobile{
@@ -140,7 +140,7 @@
 
        #firmadesktop, #firmamobile{
          padding: 10px;
-         font-family: 'Pacifico';
+         font-family: 'Pacifico', 'Impact';
         
        }
 
