--- a/public/src/my-view1.html
+++ b/public/src/my-view1.html
@@ -128,6 +128,6 @@
     </div>
   </template>
 
-  <script>Polymer({is:"my-view1",properties:{trigger:{type:String,value:"asd",notify:!0}},calcString:function(t,r,n){return null==this.lingua[r][t]?"<no string>":this.lingua[r][t]},countDown:function(t){setInterval(function(){this.trigger=moment()}.bind(this),6e4);var r=moment("2017-09-23 13:00:00"),n=moment(),o=n.format("M"),i=n.format("D"),m=n.format("H"),a=n.format("m"),e=n.format("s"),f=r.format("M")-o,s=r.format("D")-i,u=r.format("H")-m,g=r.format("m")-a,l=r.format("s")-e;l<0&&(l=60+l,g--),g<0&&(g=60+g,u--),u<0&&(u=24+u,s--),s<0&&(s=31+s,f--);var c="",v="",h="",y="",p="";f>0&&(c=f+" mesi"),s>0&&(v=", "+s+" giorni"),u>0&&(h=", "+u+" ore"),g>0&&(y=", "+g+" minuti");var D=c+v+h+y+p;return"Mancano "+D+" al nostro matrimonio!"}});</script>
+  <script>Polymer({is:"my-view1",properties:{trigger:{type:String,value:"asd",notify:!0}},calcString:function(t,r,n){return null==this.lingua[r][t]?"<no string>":this.lingua[r][t]},countDown:function(t){setInterval(function(){this.trigger=moment()}.bind(this),6e4);var r=moment("2017-09-23 13:00:00"),n=moment(),o=n.format("M"),i=n.format("D"),m=n.format("H"),a=n.format("m"),e=n.format("s"),f=r.format("M")-o,s=r.format("D")-i,u=r.format("H")-m,g=r.format("m")-a,l=r.format("s")-e;l<0&&(l=60+l,g--),g<0&&(g=60+g,u--),u<0&&(u=24+u,s--),s<0&&(s=31+s,f--);var c="",v="",h="",y="";return f>0&&(c=f+" mesi"),s>0&&(v=", "+s+" giorni"),u>0&&(h=", "+u+" ore"),g>0&&(y=", "+g+" minuti"),"Mancano "+(c+v+h+y)+" al nostro matrimonio!"}});</script>
 </dom-module>
 </body></html>
