--- a/public/src/my-view1.html
+++ b/public/src/my-view1.html
@@ -26,22 +26,29 @@
         display: flex;
         flex-wrap: wrap;
         width: 200px;
-        background: grey;
+        /*background: rgba(255,255,255,0.3);*/
         border-radius: 5px;
+        margin: 300px;
       }
 
       .countdown2 div:not(.string){
         font-weight: 900;
-        font-size: 30px;
+        font-size: 35px;
         text-align: center;
       }
 
       .number{
         width: 28%;
         margin: 1%;
-        background:black;
         color: white;
         border-radius: 5px;
+        background: linear-gradient(to bottom, 
+	                              rgb(77,77,77) 0%, 
+	                              rgb(22,22,22) calc(50% - 0.81px), 
+	                              white calc(50% - 0.8px), 
+	                              white calc(50% + 0.8px), 
+	                              rgb(22,22,22) calc(50% + 0.81px), 
+	                              black 100%); 
       }
 
       .dot ,.filler{
@@ -52,7 +59,7 @@
       }
 
       .countdown2 .dot:after{
-        content: ":";
+        /*content: ":";*/
       }
 
       .countdown2 .string{
@@ -113,9 +120,7 @@
         </div>
 
 
-        <div class="text countdown">
-                {{countDown(trigger)}}
-         </div>
+        
 
 
 
@@ -128,6 +133,6 @@
     </div>
   </template>
 
-  <script>Polymer({is:"my-view1",properties:{trigger:{type:String,value:"asd",notify:!0}},calcString:function(t,r,n){return null==this.lingua[r][t]?"<no string>":this.lingua[r][t]},countDown:function(t){setInterval(function(){this.trigger=moment()}.bind(this),6e4);var r=moment("2017-09-23 13:00:00"),n=moment(),o=n.format("M"),i=n.format("D"),m=n.format("H"),a=n.format("m"),e=n.format("s"),f=r.format("M")-o,s=r.format("D")-i,u=r.format("H")-m,g=r.format("m")-a,l=r.format("s")-e;l<0&&(l=60+l,g--),g<0&&(g=60+g,u--),u<0&&(u=24+u,s--),s<0&&(s=31+s,f--);var c="",v="",h="",y="";return f>0&&(c=f+" mesi"),s>0&&(v=", "+s+" giorni"),u>0&&(h=", "+u+" ore"),g>0&&(y=", "+g+" minuti"),"Mancano "+(c+v+h+y)+" al nostro matrimonio!"}});</script>
+  <script>Polymer({is:"my-view1",properties:{trigger:{type:String,value:"asd",notify:!0}},calcString:function(t,r,o){return null==this.lingua[r][t]?"<no string>":this.lingua[r][t]},countDown:function(t,r){setInterval(function(){this.trigger=moment()}.bind(this),6e4);var o=moment("2017-09-23 13:00:00"),n=moment(),i=n.format("M"),m=n.format("D"),a=n.format("H"),e=n.format("m"),f=n.format("s"),s=o.format("M")-i,g=o.format("D")-m,u=o.format("H")-a,l=o.format("m")-e,c=o.format("s")-f;c<0&&(c=60+c,l--),l<0&&(l=60+l,u--),u<0&&(u=24+u,g--),g<0&&(g=31+g,s--);var v="",h="",y="",p="";s>0&&(v=s+" mesi"),g>0&&(h=", "+g+" giorni"),u>0&&(y=", "+u+" ore"),l>0&&(p=", "+l+" minuti");var D=v+h+y+p+"";return"mesi"==r?s:"giorni"==r?g:"ore"==r?u:"Mancano "+D+" al nostro matrimonio!"}});</script>
 </dom-module>
 </body></html>
